--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.4",
     "redux-promise-middleware": "^5.1.1",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
