--- a/package.json
+++ b/package.json
@@ -63,21 +63,19 @@
     "glob": "^7.1.2",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
+    "node-sass": "^4.9.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.1.0",
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.5",
     "postcss-px2viewport": "0.0.11",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "ts-loader": "^3.5.0",
-    "typescript": "^2.9.2",
+    "typescript": "^3.0.1",
     "uglify-js": "^3.4.1",
     "url-loader": "^1.0.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "^4.16.5",
     "webpack-merge": "^4.1.3",
     "webpack-visualizer-plugin": "^0.1.11"
   }
