--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.4",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0"
   },
@@ -40,7 +39,7 @@
     "@types/react-redux": "^6.0.2",
     "@types/react-router-dom": "^4.2.7",
     "autoprefixer": "^8.6.3",
-    "awesome-typescript-loader": "^5.2.0",
+    "awesome-typescript-loader": "^3.5.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.6.2",
@@ -72,10 +71,12 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.1",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.5",
+    "webpack": "^3.12.0",
     "webpack-merge": "^4.1.3",
     "webpack-visualizer-plugin": "^0.1.11"
   }
