--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "webpack": "^3.12.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3",
     "webpack-visualizer-plugin": "^0.1.11"
   }
