--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
+    "prop-types": "^15.6.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.7",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
+    "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.2",
@@ -71,6 +73,7 @@
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.5",
     "postcss-px2viewport": "0.0.11",
+    "react-svg-loader": "^2.1.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
