--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
+    "@types/codemirror": "0.0.59",
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
