--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.5",
     "postcss-px2viewport": "0.0.11",
+    "prismjs": "^1.15.0",
     "react-svg-loader": "^2.1.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
