--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
+    "@types/marked": "^0.4.0",
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
@@ -66,6 +67,7 @@
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.18.0",
+    "marked": "^0.5.0",
     "node-sass": "^4.9.2",
     "open": "0.0.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
