--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.18.0",
     "jsonml-to-react-element": "^1.1.11",
+    "loader-utils": "^1.1.0",
     "marked": "^0.5.0",
     "node-sass": "^4.9.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
