feat: use rc-animate temporarily

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "prop-types": "^15.6.2",
+    "rc-animate": "^2.4.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   },
