--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/yuanzhaohao/dashkit-ui#readme",
   "dependencies": {
     "classnames": "^2.2.5",
-    "create-react-context": "^0.2.3",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
+    "@types/lodash": "^4.14.116",
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
