--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/yuanzhaohao/dashkit-ui#readme",
   "dependencies": {
     "classnames": "^2.2.5",
+    "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.1.1",
