use new context api

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "homepage": "http://yuanzhaohao.github.io/dashkit-ui/#/",
   "peerDependencies": {
     "react": ">=16.0.0",
-    "react-dom": ">=16.0.0",
-    "prop-types": "^15.6.0"
+    "react-dom": ">=16.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
