--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashkit-ui",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "A ui library.",
   "main": "./lib/index.js",
   "author": "yuanzhaohao",
@@ -14,9 +14,12 @@
     "start": "npm run dev",
     "dev": "node build/dev.js",
     "docs": "node build/docs.js",
-    "publish": "node build/publish.js && tsc -p tsconfig.json && babel publish/es --out-dir publish/lib",
-    "ts": "tsc -p tsconfig.json",
-    "babel": "babel publish/es --out-dir publish/lib"
+    "publish": "rm -rf publish && npm run publish:dev && npm run publish:prod && npm run publish:ts && npm run publish:copy && npm run publish:babel",
+    "publish:copy": "cp -a publish/es publish/lib && cp -a src publish/src",
+    "publish:ts": "tsc -p tsconfig.json",
+    "publish:babel": "babel publish/lib --out-dir publish/lib",
+    "publish:dev": "webpack --config build/webpack.publish.config.js",
+    "publish:prod": "webpack --config build/webpack.publish.prod.config.js"
   },
   "repository": {
     "type": "git",
@@ -85,6 +88,7 @@
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.1",
     "url-loader": "^0.6.2",
+    "util": "^0.11.1",
     "webpack": "^3.12.0",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.22.3",
