--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "compression-webpack-plugin": "^1.1.11",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
+    "dts-gen": "^0.5.7",
+    "dts-generator": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.0.0",
@@ -88,7 +90,6 @@
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.1",
     "url-loader": "^0.6.2",
-    "util": "^0.11.1",
     "webpack": "^3.12.0",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.22.3",
