--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashkit-ui",
   "version": "0.0.4",
   "description": "A ui library.",
-  "main": "./lib/index.js",
+  "main": "./es/index.js",
   "author": "yuanzhaohao",
   "keywords": [
     "ui",
@@ -14,8 +14,7 @@
     "start": "npm run dev",
     "dev": "node build/dev.js",
     "docs": "node build/docs.js",
-    "publish": "rm -rf publish && npm run publish:dev && npm run publish:prod && npm run publish:ts && npm run publish:copy && npm run publish:babel",
-    "publish:copy": "cp -a publish/es publish/lib && cp -a src publish/src",
+    "publish": "node build/publish.js && npm run publish:ts && npm run publish:babel",
     "publish:ts": "tsc -p tsconfig.json",
     "publish:babel": "babel publish/lib --out-dir publish/lib",
     "publish:dev": "webpack --config build/webpack.publish.config.js",
@@ -59,8 +58,6 @@
     "compression-webpack-plugin": "^1.1.11",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
-    "dts-gen": "^0.5.7",
-    "dts-generator": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.0.0",
