--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "classnames": "^2.2.5",
     "create-react-context": "^0.2.3",
     "lodash": "^4.17.11",
+    "lodash-es": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
