--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "create-react-context": "^0.2.3",
-    "lodash": "^4.17.11",
+    "lodash-es": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-transition-group": "^2.4.0"
@@ -47,7 +47,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.4",
     "@types/jest": "^23.3.12",
-    "@types/lodash": "^4.14.116",
+    "@types/lodash-es": "^4.17.3",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "@types/react-router-dom": "^4.2.7",
