--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dashkit-ui",
   "description": "A ui library.",
-  "version": "0.0.9",
-  "main": "es/index.js",
+  "version": "0.0.10",
+  "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
     "dist",
