--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dashkit-ui",
   "description": "A ui library.",
-  "version": "0.0.11-beta.7",
+  "version": "0.0.12",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -24,8 +24,21 @@
     "pub:tsEs": "tsc -p tsconfig.json",
     "pub:tsLib": "tsc -p tsconfig.json --declarationDir publish/lib",
     "pub:babel": "babel publish/lib --out-dir publish/lib",
-    "lint": "eslint ./src",
+    "format": "prettier --parser typescript './src/**/*.{ts,tsx}' --write",
+    "lint": "tslint --project tsconfig.json './src/**/*.{ts,tsx}' && tsc --noEmit --pretty",
+    "lint:fix": "tslint --project tsconfig.json --fix './src/**/*.{ts,tsx}' && tsc --noEmit --pretty",
     "test": "jest ./src"
+  },
+  "lint-staged": {
+    "*.{js,json,md}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{ts,tsx}": [
+      "prettier --parser typescript --write",
+      "tslint --project tsconfig.json --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -81,6 +94,7 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.18.0",
     "jest": "^23.6.0",
+    "lint-staged": "^8.1.6",
     "loader-utils": "^1.1.0",
     "markdown-website-loader": "0.0.4",
     "node-sass": "^4.10.0",
@@ -88,6 +102,7 @@
     "ora": "^2.1.0",
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.5",
+    "prettier": "^1.17.0",
     "react-dev-utils": "^5.0.2",
     "react-router-dom": "^4.2.2",
     "react-svg-loader": "^2.1.0",
@@ -97,6 +112,8 @@
     "style-loader": "^0.21.0",
     "ts-jest": "^23.10.5",
     "ts-loader": "^4.4.2",
+    "tslint": "^5.16.0",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.1",
     "url-loader": "^0.6.2",
