--- a/.prettierrc
+++ b/.prettierrc
@@ -3,13 +3,6 @@
   "trailingComma": "all",
   "printWidth": 100,
   "proseWrap": "never",
-  "arrowParens": "always",
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": {
-        "parser": "json"
-      }
-    }
-  ]
+  "arrowParens": "avoid",
+  "bracketSpacing": true
 }
