--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.18.0",
+    "husky": "^2.2.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.6",
     "loader-utils": "^1.1.0",
