! feat: use babel7 to transform ts files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "./site/**/*.ts",
     "./site/**/*.tsx",
     "./site/**/*.svg",
+    "./docs/**/*.md",
     "./site/**/*.json"
   ],
   "exclude": ["./node_modules"]
