--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dashkit-ui",
   "description": "A ui library.",
-  "version": "0.0.16-beta.1",
+  "version": "0.0.16",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
