--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dev": "node scripts/dev.js",
     "site": "node scripts/docs.js && gh-pages -d gh-pages",
     "pub": "node scripts/publish.js && npm run pub:tsEs && npm run pub:tsLib",
-    "pub:tsEs": "tsc -p tsconfig.json",
-    "pub:tsLib": "tsc -p tsconfig.json --declarationDir publish/lib",
+    "pub:tsEs": "tsc -p tsconfig.publish.json",
+    "pub:tsLib": "tsc -p tsconfig.publish.json --declarationDir publish/lib",
     "format": "prettier --parser typescript './{src,site}/**/*.{ts,tsx}' --write",
     "format:scripts": "prettier './scripts/*.js' --write",
     "lint": "tslint tsconfig.json './{src,site}/**/*.{ts,tsx}'",
