--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashkit-ui",
   "description": "UI Components built on React.",
   "version": "0.0.17",
-  "main": "lib/index.js",
+  "main": "es/index.js",
   "module": "es/index.js",
   "files": [
     "dist",
